# rust-crud-api

./: .gitignore  Cargo.toml  readme.md
src/: db.rs  handler.rs  main.rs  models.rs  repository.rs
